--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+node_modules/
+.next/
+out/
+dist/
+.env
+.env.local
+.env.*.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+coverage/
+.vercel/
+.idea/
+.vscode/
+/*.log
+docker-compose.override.yml
+/.parcel-cache
+/.pnp
+.pnp.js
+.turbo
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
