--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -28,49 +28,62 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to ECR
+      - name: Package source code
         env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: portfolio-next
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # Retry logic for Docker build to handle transient registry errors
-          for i in 1 2 3; do
-            docker build -t $ECR_REPOSITORY:$IMAGE_TAG . && break || {
-              echo "Build attempt $i failed, retrying...";
-              sleep 10;
-            }
-          done
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-
-      - name: Deploy to EC2
+          # Create a tarball of the source code
+          tar -czf app-$IMAGE_TAG.tar.gz --exclude=node_modules --exclude=.git --exclude=.next .
+          
+      - name: Upload source to EC2
         env:
-          EC2_HOST: ec2-13-220-111-43.compute-1.amazonaws.com
-          EC2_USER: ec2-user
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: portfolio-next
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           # Save SSH key
           echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
           
+          # Upload tarball to EC2
+          scp -o StrictHostKeyChecking=no -i ec2_key.pem app-$IMAGE_TAG.tar.gz ec2-user@ec2-13-220-111-43.compute-1.amazonaws.com:~/
+
+      - name: Build and deploy on EC2
+        env:
+          EC2_HOST: ec2-13-220-111-43.compute-1.amazonaws.com
+          EC2_USER: ec2-user
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: portfolio-next
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
           # Deploy to EC2
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem $EC2_USER@$EC2_HOST << 'EOF'
-            # Login to ECR
-            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ steps.login-ecr.outputs.registry }}
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem $EC2_USER@$EC2_HOST << EOF
+            # Create build directory
+            mkdir -p ~/portfolio-build
+            cd ~/portfolio-build
+            
+            # Extract source code
+            tar -xzf ~/app-$IMAGE_TAG.tar.gz
+            
+            # Build Docker image on EC2 (bypasses Docker Hub issues from GitHub Actions)
+            docker build -t portfolio-next:$IMAGE_TAG .
+            docker tag portfolio-next:$IMAGE_TAG portfolio-next:latest
+            
+            # Login to ECR and push
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin $ECR_REGISTRY
+            docker tag portfolio-next:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker tag portfolio-next:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:latest
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
             
             # Stop and remove old container
             docker stop portfolio-next || true
             docker rm portfolio-next || true
             
-            # Pull and run new container on port 3001
-            docker pull ${{ steps.login-ecr.outputs.registry }}/portfolio-next:latest
-            docker run -d --name portfolio-next -p 3001:3000 --restart unless-stopped ${{ steps.login-ecr.outputs.registry }}/portfolio-next:latest
+            # Run new container on port 3001
+            docker run -d --name portfolio-next -p 3001:3000 --restart unless-stopped portfolio-next:latest
             
-            # Clean up old images
+            # Clean up
+            cd ~
+            rm -f app-$IMAGE_TAG.tar.gz
             docker image prune -af
           EOF
           
