Fix tar error by creating archive from parent directory

--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -32,8 +32,11 @@ jobs:
         env:
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          # Create a tarball of the source code
-          tar -czf app-$IMAGE_TAG.tar.gz --exclude=node_modules --exclude=.git --exclude=.next --exclude='*.tar.gz' .
+          # Create a tarball of the source code (output to parent dir to avoid self-reference)
+          cd ..
+          tar -czf app-$IMAGE_TAG.tar.gz --exclude=portfolio-next/node_modules --exclude=portfolio-next/.git --exclude=portfolio-next/.next portfolio-next/
+          mv app-$IMAGE_TAG.tar.gz portfolio-next/
+          cd portfolio-next
           
       - name: Upload source to EC2
         env:
